# kailo-beewell-graphs

./: .gitignore  LICENSE  comparison_graph.py  fake_school_comparison.py  pyproject.toml  rag_rating_script.vba  rag_ratings.ipynb  school_comparison_graphs.ipynb  school_responses_all_pupils_graphs.py  standard_school_graphs.ipynb
data/synthetic/standard/: clean_synthetic_standard_survey.standard_school_aggregate_responses.0000000010000.csv  synthetic_standard_survey.standard_school_aggregate_demographic.0000000010000.csv  synthetic_standard_survey.standard_school_aggregate_responses.0000000010000.csv  synthetic_standard_survey.standard_school_aggregate_scores.0000000010000.csv  synthetic_standard_survey.standard_school_aggregate_scores_rag.0000000010000.csv  (+1 more)
north_devon_graphs/: standard_north_devon_responses_graphs.ipynb
school_graphs/: comparison_graph.py  fake_school_comparison.py  global_graph_settings.py  measure_labels_dict.py  rag_ratings.ipynb  rag_schools_comparison_graph.py  responses_double_comparison_graph.py  school_comparison_graphs.ipynb  school_responses_all_pupils_graphs.py  standard_demographics.ipynb  standard_school_responses_comparison_graphs.ipynb  standard_school_responses_graphs copy.ipynb  standard_school_responses_graphs.ipynb  symbol_multi_comparison_graph_annalise.py  symbol_responses.ipynb  symbol_school_graphs.ipynb  symbol_school_responses_graphs.ipynb  test_demo.ipynb  topic_name_dict.py  topic_rag_comparison_graphs.ipynb  total_response_counts.ipynb
school_graphs/mocks/: fake_school_comparison.py
(+3 files in other folders)
