[tool.poetry]
name = "kailo-beewell-graphs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
ipykernel= "^6.7.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
appnope = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 119
target-version = "py312"
select = [
    "ALL", # include all the rules, including new ones
]